--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <span style="color: var(--color1)">[</span><a href="https://github.com/jlervin">math 407</a><span style="color: var(--color1)">]</span>
                 <span style="color: var(--color3)">[</span><a href="https://github.com/jlervin">math 461</a><span style="color: var(--color3)">]</span>
                 <span style="color: var(--color4)">[</span><a href="https://github.com/jlervin">esdpe 422</a><span style="color: var(--color4)">]</span>
+                <span style="color: var(--color6)">[</span><a href="https://canvas.uw.edu">canvas</a><span style="color: var(--color6)">]</span>
             </p>
             <p class="lst">
                 <span style="color: var(--color4)">[</span><a href="https://github.com/jlervin">github</a><span style="color: var(--color4)">]</span>
