Changed font to Iosevka

--- a/index.html
+++ b/index.html
@@ -14,27 +14,28 @@
         <div class=categories>
             <p class="cat">School</p>
             <p class="cat">Work</p>
-            <p class="cat">Fun</p>
+            <p class="cat">Other</p>
         </div>
         <div class=items>
             <p class="lst">
-                <span style="color: var(--color1)">[</span><a href="https://github.com/jlervin">math 407</a><span style="color: var(--color1)">]</span>
-                <span style="color: var(--color3)">[</span><a href="https://github.com/jlervin">math 461</a><span style="color: var(--color3)">]</span>
-                <span style="color: var(--color4)">[</span><a href="https://github.com/jlervin">esdpe 422</a><span style="color: var(--color4)">]</span>
+                <span style="color: var(--color1)">[</span><a href="https://github.com/jlervin">math407</a><span style="color: var(--color1)">]</span>
+                <span style="color: var(--color3)">[</span><a href="https://github.com/jlervin">math461</a><span style="color: var(--color3)">]</span>
+                <span style="color: var(--color4)">[</span><a href="https://github.com/jlervin">esdpe422</a><span style="color: var(--color4)">]</span>
                 <span style="color: var(--color6)">[</span><a href="https://canvas.uw.edu">canvas</a><span style="color: var(--color6)">]</span>
             </p>
             <p class="lst">
-                <span style="color: var(--color4)">[</span><a href="https://github.com/jlervin">github</a><span style="color: var(--color4)">]</span>
+                <span style="color: var(--color1)">[</span><a href="https://courses.cs.washington.edu/courses/cse391/19au/">cse391</a><span style="color: var(--color1)">]</span>
+                <span style="color: var(--color4)">[</span><a href="https://us.edstem.org">ed</a><span style="color: var(--color4)">]</span>
                 <span style="color: var(--color5)">[</span><a href="https://gradescope.com">gradescope</a><span style="color: var(--color5)">]</span>
-                <span style="color: var(--color1)">[</span><a href="https://https://courses.cs.washington.edu/courses/cse391/19au/">cse391</a><span style="color: var(--color1)">]</span>
                 <span style="color: var(--color3)">[</span><a href="https://uw-cse.slack.com">slack</a><span style="color: var(--color3)">]</span>
                 <span style="color: var(--color6)">[</span><a href="https://piazza.com">piazza</a><span style="color: var(--color6)">]</span>
             </p>
             <p class="lst">
                 <span style="color: var(--color5)">[</span><a href="https://reddit.com/r/unixporn">unix</a><span style="color: var(--color5)">]</span>
                 <span style="color: var(--color1)">[</span><a href="https://reddit.com/r/globaloffensive">csgo</a><span style="color: var(--color1)">]</span>
-                <span style="color: var(--color1)">[</span><a href="https://reddit.com/r/companyofheroes">coh</a><span style="color: var(--color1)">]</span>
-                <span style="color: var(--color2)">[</span><a href="https://youtube.com">yoututbe</a><span style="color: var(--color2)">]</span>
+                <span style="color: var(--color4)">[</span><a href="https://reddit.com/r/companyofheroes">coh</a><span style="color: var(--color4)">]</span>
+                <span style="color: var(--color2)">[</span><a href="https://youtube.com">youtube</a><span style="color: var(--color2)">]</span>
+                <span style="color: var(--color5)">[</span><a href="https://gmail.com">mail</a><span style="color: var(--color5)">]</span>
             </p>
         </div>
     </div>
