--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="style.css" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700&display=swap" rel="stylesheet">
-    <title>~</title>
+    <title>home</title>
 </head>
 
 
@@ -18,8 +17,8 @@
         </div>
         <div class=items>
             <p class="lst">
-                <span style="color: var(--color1)">[</span><a href="https://github.com/jlervin">math407</a><span style="color: var(--color1)">]</span>
-                <span style="color: var(--color3)">[</span><a href="https://github.com/jlervin">math461</a><span style="color: var(--color3)">]</span>
+                <span style="color: var(--color1)">[</span><a href="https://sites.math.washington.edu/~perkins/407ABWin20/">math407</a><span style="color: var(--color1)">]</span>
+                <span style="color: var(--color3)">[</span><a href="https://canvas.uw.edu/courses/1352532">math461</a><span style="color: var(--color3)">]</span>
                 <span style="color: var(--color4)">[</span><a href="https://github.com/jlervin">esdpe422</a><span style="color: var(--color4)">]</span>
                 <span style="color: var(--color6)">[</span><a href="https://canvas.uw.edu">canvas</a><span style="color: var(--color6)">]</span>
             </p>
