Updated startpage for 20sp

--- a/index.html
+++ b/index.html
@@ -17,19 +17,18 @@
         </div>
         <div class=items>
             <p class="lst">
-                <span style="color: var(--color1)">[</span><a href="https://sites.math.washington.edu/~perkins/407ABWin20/">math407</a><span style="color: var(--color1)">]</span>
-                <span style="color: var(--color3)">[</span><a href="https://canvas.uw.edu/courses/1352532">math461</a><span style="color: var(--color3)">]</span>
-                <span style="color: var(--color4)">[</span><a href="https://github.com/jlervin">esdpe422</a><span style="color: var(--color4)">]</span>
+                <span style="color: var(--color1)">[</span><a href="https://canvas.uw.edu/courses/1373479">math409</a><span style="color: var(--color1)">]</span>
+                <span style="color: var(--color3)">[</span><a href="https://canvas.uw.edu/courses/1352532">math462</a><span style="color: var(--color3)">]</span>
                 <span style="color: var(--color6)">[</span><a href="https://canvas.uw.edu">canvas</a><span style="color: var(--color6)">]</span>
             </p>
             <p class="lst">
-                <span style="color: var(--color1)">[</span><a href="https://courses.cs.washington.edu/courses/cse391/20wi/">cse391</a><span style="color: var(--color1)">]</span>
-                <span style="color: var(--color4)">[</span><a href="https://us.edstem.org">ed</a><span style="color: var(--color4)">]</span>
+                <span style="color: var(--color1)">[</span><a href="https://courses.cs.washington.edu/courses/cse391/20sp/">cse391</a><span style="color: var(--color1)">]</span>
                 <span style="color: var(--color5)">[</span><a href="https://gradescope.com">gradescope</a><span style="color: var(--color5)">]</span>
                 <span style="color: var(--color3)">[</span><a href="https://uw-cse.slack.com">slack</a><span style="color: var(--color3)">]</span>
                 <span style="color: var(--color6)">[</span><a href="https://piazza.com">piazza</a><span style="color: var(--color6)">]</span>
             </p>
             <p class="lst">
+                <span style="color: var(--color5)">[</span><a href="https://www.rememberthemilk.com/app/#list/46127898/718312141">rtm</a><span style="color: var(--color5)">]</span>
                 <span style="color: var(--color5)">[</span><a href="https://reddit.com/r/unixporn">unix</a><span style="color: var(--color5)">]</span>
                 <span style="color: var(--color1)">[</span><a href="https://reddit.com/r/globaloffensive">csgo</a><span style="color: var(--color1)">]</span>
                 <span style="color: var(--color4)">[</span><a href="https://reddit.com/r/companyofheroes">coh</a><span style="color: var(--color4)">]</span>
