--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
     <title>home</title>
 </head>
 
-
 <body>
-</body>
-    <div class=box>
-        <div class=categories>
+    <div class="box">
+        <div class="categories">
             <p class="cat">School</p>
             <p class="cat">Work</p>
             <p class="cat">Other</p>
         </div>
-        <div class=items>
+        <div class="items">
             <p class="lst">
                 <span style="color: var(--color1)">[</span><a href="https://canvas.uw.edu/courses/1373479">math409</a><span style="color: var(--color1)">]</span>
                 <span style="color: var(--color3)">[</span><a href="https://canvas.uw.edu/courses/1352532">math462</a><span style="color: var(--color3)">]</span>
@@ -37,4 +36,5 @@
             </p>
         </div>
     </div>
+</body>
 </html>
