Update startpage for post grad

--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
 <body>
     <div class="box">
         <div class="categories">
-            <p class="cat">School</p>
+            <p class="cat">Personal</p>
             <p class="cat">Work</p>
             <p class="cat">Other</p>
         </div>
         <div class="items">
             <p class="lst">
-                <span style="color: var(--color1)">[</span><a href="https://canvas.uw.edu/courses/1373479">math409</a><span style="color: var(--color1)">]</span>
-                <span style="color: var(--color3)">[</span><a href="https://canvas.uw.edu/courses/1352532">math462</a><span style="color: var(--color3)">]</span>
-                <span style="color: var(--color6)">[</span><a href="https://canvas.uw.edu">canvas</a><span style="color: var(--color6)">]</span>
+                <span style="color: var(--color1)">[</span><a href="https://github.com/hschafer/cse-stat-416-book">cse416</a><span style="color: var(--color1)">]</span>
+                <span style="color: var(--color3)">[</span><a href="https://github.com/jlervin/berry">berry</a><span style="color: var(--color3)">]</span>
+                <span style="color: var(--color4)">[</span><a href="https://github.com/3b1b/manim">manim</a><span style="color: var(--color5)">]</span>
+                <span style="color: var(--color5)">[</span><a href="https://uw-cse.slack.com">slack</a><span style="color: var(--color5)">]</span>
             </p>
             <p class="lst">
                 <span style="color: var(--color1)">[</span><a href="https://courses.cs.washington.edu/courses/cse391/20sp/">cse391</a><span style="color: var(--color1)">]</span>
                 <span style="color: var(--color5)">[</span><a href="https://gradescope.com">gradescope</a><span style="color: var(--color5)">]</span>
-                <span style="color: var(--color3)">[</span><a href="https://uw-cse.slack.com">slack</a><span style="color: var(--color3)">]</span>
-                <span style="color: var(--color6)">[</span><a href="https://piazza.com">piazza</a><span style="color: var(--color6)">]</span>
+                <span style="color: var(--color6)">[</span><a href="https://us.edstem.org/courses/390/discussion/22561">ed</a><span style="color: var(--color6)">]</span>
             </p>
             <p class="lst">
                 <span style="color: var(--color1)">[</span><a href="https://www.rememberthemilk.com/app">rtm</a><span style="color: var(--color1)">]</span>
